# CUnit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: release.yml
cmake/: CompileOptions.cmake  GitVersion.cmake  OptionVariables.cmake  ProjectConfig.cmake
example/: CMakeLists.txt  expect_fail.c  sample.c  sample_cpp.cpp
include/: cunit.h
include/cunit/: assert.h  compare.h  ctx.h  def.h  suite.h  value.h
src/: compare.c  cunit.c  init.c  init.h  once.h  suite.c
